# orion-bge-m3

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
scripts/: bge-m3ctl  fetch-bge-m3.sh
src/orion_bge_m3/: asgi.py  config.py
src/orion_bge_m3/application/: encode_sparse.py
src/orion_bge_m3/domain/ports/: sparse_encoder.py
src/orion_bge_m3/infrastructure/: bgem3_encoder.py
src/orion_bge_m3/interfaces/http/: app.py
src/orion_bge_m3/interfaces/http/routers/: embed.py  health.py
